--- a/dashboard.html
+++ b/dashboard.html
@@ -4,8 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="dashboard.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <!-- BOXICONS -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
   </head>
   <body>
-    <h1>Admin Dashboard</h1>
+    <!-- navigation -->
+    <div class="container">
+      <div class="navigation">
+        <ul>
+          <li>
+            <a href="">
+              <span><h3 class="fab fa-odnoklassniki fa-lg">Yoruba Aloud</h3></span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="icon bx bx-home"></span>
+              <span class="title">Dashboard</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <span class="icon bx bx-category"></span>
+              <span class="title">Categories</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <span class="icon bx bx-book-content"></span>
+              <span class="title">Learning Materials</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <span class="icon bx bx-certification"></span>
+              <span class="title">Quiz</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <span class="icon bx bxs-id-card"></span>
+              <span class="title">Admin Profile</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <span class="icon bx bxs-log-out-circle"></span>
+              <span class="title">Logout</span>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
   </body>
 </html>
