--- a/dashboard.html
+++ b/dashboard.html
@@ -22,42 +22,42 @@
           </li>
           <li>
             <a href="">
-              <span class="icon bx bx-home"></span>
+              <span class="bx bx-home"></span>
               <span class="title">Dashboard</span>
             </a>
           </li>
 
           <li>
             <a href="">
-              <span class="icon bx bx-category"></span>
+              <span class="bx bx-category"></span>
               <span class="title">Categories</span>
             </a>
           </li>
 
           <li>
             <a href="">
-              <span class="icon bx bx-book-content"></span>
+              <span class="bx bx-book-content"></span>
               <span class="title">Learning Materials</span>
             </a>
           </li>
 
           <li>
             <a href="">
-              <span class="icon bx bx-certification"></span>
+              <span class="bx bx-certification"></span>
               <span class="title">Quiz</span>
             </a>
           </li>
 
           <li>
             <a href="">
-              <span class="icon bx bxs-id-card"></span>
+              <span class="bx bxs-id-card"></span>
               <span class="title">Admin Profile</span>
             </a>
           </li>
 
           <li>
             <a href="">
-              <span class="icon bx bxs-log-out-circle"></span>
+              <span class="bx bxs-log-out-circle"></span>
               <span class="title">Logout</span>
             </a>
           </li>
