--- a/dashboard.html
+++ b/dashboard.html
@@ -66,5 +66,33 @@
       </div>
     </div>
 
+    <!-- =========== The Hamburger Toggle ============ -->
+
+    <div class="main">
+      <div class="topbar">
+          <div class="toggle">
+              <ion-icon name="menu-outline"></ion-icon>
+          </div>
+      </div>
+    </div>
+
+    <!-- ========= Order Cards =========== -->
+    <div class="cardBox">
+      <div class="card">
+        <div>
+            <div class="numbers">1,504</div>
+            <div class="cardName">Daily Views</div>
+        </div>
+
+        <div class="iconBx">
+            <ion-icon name="eye-outline"></ion-icon>
+        </div>
+    </div>
+    </div>
+
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
