--- a/dashboard.html
+++ b/dashboard.html
@@ -73,26 +73,68 @@
           <div class="toggle">
               <ion-icon name="menu-outline"></ion-icon>
           </div>
+          <h3>Kodark Black</h3>
+      </div>
+
+      <!-- ========= Order Cards =========== -->
+
+      <div class="cardCat">
+        <div class="cardCont">
+          <span class='bx bx-book-content'></span>
+          <h2>Total Categories</h2>
+          <p>2</p>
+        </div>
+
+        <div class="cardCont">
+          <span class='bx bx-book-content'></span>
+          <h2>Total Categories</h2>
+          <p>2</p>
+        </div>
+
+        <div class="cardCont">
+          <span class='bx bx-book-content'></span>
+          <h2>Total Categories</h2>
+          <p>2</p>
+        </div>
+      </div>
+
+      <!-- ===== The Second card ======= -->
+
+      <div class="cardCat">
+        <div class="cardCont">
+          <span class='bx bx-book-content'></span>
+          <h2>Total Categories</h2>
+          <p>2</p>
+        </div>
+
+        <div class="cardCont">
+          <span class='bx bx-book-content'></span>
+          <h2>Total Categories</h2>
+          <p>2</p>
+        </div>
+
+        <div class="cardCont">
+          <span class='bx bx-book-content'></span>
+          <h2>Total Categories</h2>
+          <p>2</p>
+        </div>
       </div>
     </div>
 
     <!-- ========= Order Cards =========== -->
-    <div class="cardBox">
-      <div class="card">
-        <div>
-            <div class="numbers">1,504</div>
-            <div class="cardName">Daily Views</div>
-        </div>
 
-        <div class="iconBx">
-            <ion-icon name="eye-outline"></ion-icon>
-        </div>
-    </div>
-    </div>
+    <!-- <div class="cardCat">
+      <div class="cardCont">
+        <span class='bx bx-book-content'></span>
+        <h2>Total Categories</h2>
+        <p>2</p>
+      </div>
+    </div> -->
 
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="/dashboard.js"></script>
   </body>
 </html>
