--- a/dashboard.html
+++ b/dashboard.html
@@ -70,10 +70,10 @@
 
     <div class="main">
       <div class="topbar">
+        <h3>Kodark Black</h3>
           <div class="toggle">
               <ion-icon name="menu-outline"></ion-icon>
           </div>
-          <h3>Kodark Black</h3>
       </div>
 
       <!-- ========= Order Cards =========== -->
@@ -81,20 +81,20 @@
       <div class="cardCat">
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2>Total Categories</h2>
-          <p>2</p>
+          <h2 class="cardName">Total Categories</h2>
+          <p class="numbers">2</p>
         </div>
 
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2>Total Categories</h2>
-          <p>2</p>
+          <h2 class="cardName">Total Categories</h2>
+          <p class="numbers">2</p>
         </div>
 
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2>Total Categories</h2>
-          <p>2</p>
+          <h2 class="cardName">Total Categories</h2>
+          <p class="numbers">2</p>
         </div>
       </div>
 
@@ -103,33 +103,20 @@
       <div class="cardCat">
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2>Total Categories</h2>
-          <p>2</p>
+          <h2 class="cardName">Total Categories</h2>
+          <p class="numbers">2</p>
         </div>
 
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2>Total Categories</h2>
-          <p>2</p>
+          <h2 class="cardName">Total Categories</h2>
+          <p class="numbers">2</p>
         </div>
 
         <div class="cardCont">
-          <span class='bx bx-book-content'></span>
-          <h2>Total Categories</h2>
-          <p>2</p>
+          <button class="cardBtn">Top Three Student</button>
         </div>
       </div>
-    </div>
-
-    <!-- ========= Order Cards =========== -->
-
-    <!-- <div class="cardCat">
-      <div class="cardCont">
-        <span class='bx bx-book-content'></span>
-        <h2>Total Categories</h2>
-        <p>2</p>
-      </div>
-    </div> -->
 
 
 
