--- a/dashboard.html
+++ b/dashboard.html
@@ -70,11 +70,12 @@
 
     <div class="main">
       <div class="topbar">
-        <h3>Kodark Black</h3>
           <div class="toggle">
               <ion-icon name="menu-outline"></ion-icon>
           </div>
       </div>
+
+      <h3>Kodark Black</h3>
 
       <!-- ========= Order Cards =========== -->
 
@@ -87,14 +88,14 @@
 
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2 class="cardName">Total Categories</h2>
-          <p class="numbers">2</p>
+          <h2 class="cardName">Learning Materials</h2>
+          <p class="numbers">12</p>
         </div>
 
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2 class="cardName">Total Categories</h2>
-          <p class="numbers">2</p>
+          <h2 class="cardName">Total Sub-Categories</h2>
+          <p class="numbers">37</p>
         </div>
       </div>
 
@@ -103,21 +104,20 @@
       <div class="cardCat">
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2 class="cardName">Total Categories</h2>
-          <p class="numbers">2</p>
+          <h2 class="cardName">Total Quiz</h2>
+          <p class="numbers">0</p>
         </div>
 
         <div class="cardCont">
           <span class='bx bx-book-content'></span>
-          <h2 class="cardName">Total Categories</h2>
-          <p class="numbers">2</p>
+          <h2 class="cardName">Total Students</h2>
+          <p class="numbers">9</p>
         </div>
 
         <div class="cardCont">
           <button class="cardBtn">Top Three Student</button>
         </div>
       </div>
-
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
